--- a/ИАД/Lab1/Report.tex
+++ b/ИАД/Lab1/Report.tex
@@ -49,11 +49,82 @@ Type 'q()' to quit R.
 
 Выполним команду \code{demo()}. Результат выполнения команды представлен
 на рисунке \ref{fig:demo}.
-
 \begin{figure}[H]
     \centering
     \includegraphics[width=.8\linewidth]{demo}
     \caption{Результат выполнения команды \code{demo()}}
     \label{fig:demo}
 \end{figure}
+
+Выполним команду \code{help(demo)}. Результат ее выполнения изображен на рисунке \ref{fig:help-demo}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.8\linewidth]{help-demo}
+    \caption{Результат выполнения команды \code{help(demo)}}
+    \label{fig:help-demo}
+\end{figure}
+
+Выполним операции над векторами:
+\begin{lstlisting}
+> v1 <- c(1, 2, 3, 4, 5) * 3
+> v1
+[1]  3  6  9 12 15
+> v1[1:3]
+[1] 3 6 9
+> v2 = rep(15, 4)
+> v2
+[1] 15 15 15 15
+> length(v2)
+[1] 4
+\end{lstlisting}
+
+Выполним операции над матрицами:
+\begin{lstlisting}
+> mat1 <- matrix (data=1, nrow=3, ncol=3)
+> mat1
+    [,1] [,2] [,3]
+[1,]    1    1    1
+[2,]    1    1    1
+[3,]    1    1    1
+> is.matrix(mat1)
+[1] TRUE
+> dim(mat1)
+[1] 3 3
+> dim(mat1)
+[1] 3 3
+\end{lstlisting}
+
+Работа с графикой:
+\begin{lstlisting}
+> x <- c(1, 2, 3, 4, 5)
+> y <- c(1, 2, 3, 4, 5)
+> plot(x, y, type="l")
+> plot(atan, -2 * pi, 2* pi)
+\end{lstlisting}
+
+Результат выполнения программы:
+\begin{figure}[H]
+    \centering
+    \subfloat[y = x]{\includegraphics[width=.4\linewidth]{y=x}}
+    \hspace{.15\linewidth}
+    \subfloat[y = arctan(x)]{\includegraphics[width=.4\linewidth]{atan}}
+    \caption{Демонстация работы с графикой}
+\end{figure}
+
+\section{Контрольные вопросы}
+\begin{enumerate}
+    \item Особенности языка R.
+    
+    R - язык программирования, ориентированный на статическую обработку данных.
+    Он является интерпретируемым языком, основным инструментом для работы с
+    которым является командный интерпретатор \code{R.exe}.
+
+    Основной программной единицей в языке являются объекты (скалярные базовые
+    значения отсутствуют).
+
+    Для присваивания используется следующий оператор: \code{<-}. Язык регистрозависим.
+
+    \item Для получения подробной информации о функции используется команда \code{help}.
+    \item Команда \code{Round}
+\end{enumerate}
 \end{document}
