--- a/Web/Lab6/Report.tex
+++ b/Web/Lab6/Report.tex
@@ -2,8 +2,8 @@
 \usepackage{../../tex-shared/preamble}
 
 \renewcommand{\mylabnumber}{6}
-\renewcommand{\mylabtitle}{Исследование возможностей
-ускорения разработки веб-приложений с использованием HAML}
+\renewcommand{\mylabtitle}{Исследование возможностей ускорения разработки
+клиентских приложений с использованием SASS}
 \renewcommand{\mysubject}{Веб-технологии}
 \renewcommand{\mylecturer}{Дрозин А.Ю.}
 
