Use report layout

--- a/Web/Курсач/Report.tex
+++ b/Web/Курсач/Report.tex
@@ -1,14 +1,7 @@
 \documentclass[a4paper,14pt]{extarticle}
-\usepackage{../../tex-shared/preamble}
-
-\renewcommand{\mylabnumber}{4}
-\renewcommand{\mylabtitle}{Исследование возможнойстей
-библиотеки JQuery}
-\renewcommand{\mysubject}{Веб-технологии}
-\renewcommand{\mylecturer}{Дрозин А.Ю.}
+\usepackage{../../tex-shared/no-title-layout}
 
 \begin{document}
-\input{../../tex-shared/title-page.tex}
 
 \section{Техническое задание}
 \subsection{Цели создания и целевая аудитория}
