--- a/ТПО/Lab5/report.tex
+++ b/ТПО/Lab5/report.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,14pt]{extarticle}
-\usepackage{../../tex-shared/preamble}
+\usepackage{../../tex-shared/report-layout}
 
 \renewcommand{\mylabnumber}{5}
 \renewcommand{\mylabtitle}{Исследование способов модульного тестирования
@@ -16,7 +16,7 @@
 
 \section{Порядок выполнения работы}
 \begin{enumerate}
-    \item Реализовать на языке С# один из классов, спроектированных в лабораторной
+    \item Реализовать на языке С\# один из классов, спроектированных в лабораторной
     работе № 1. Методы класса при этом не реализовывать.
     \item Разработать для созданного класса набор модульных тестов,
     включающий тесты для каждого метода.
