--- a/ТСИС/Lab1/report.tex
+++ b/ТСИС/Lab1/report.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,14pt]{extarticle}
-\usepackage{../../tex-shared/preamble}
+\usepackage{../../tex-shared/report-layout}
 
 \renewcommand{\mylabnumber}{1}
 \renewcommand{\mylabtitle}{Исследования способов построения и
