--- a/ТИПИС/Lab2/report.tex
+++ b/ТИПИС/Lab2/report.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,14pt]{extarticle}
-\usepackage{../../tex-shared/preamble}
+\usepackage{../../tex-shared/report-layout}
 
 \renewcommand{\mylabnumber}{2}
 \renewcommand{\mylabtitle}{Расчет числовых характеристик и 
