--- a/ТПО/Lab4/report.tex
+++ b/ТПО/Lab4/report.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,14pt]{extarticle}
-\usepackage{../../tex-shared/preamble}
+\usepackage{../../tex-shared/report-layout}
 
 \renewcommand{\mylabnumber}{4}
 \renewcommand{\mylabtitle}{Исследование способов интеграционного
