Use manual uppercase for section titles in no-title layout due to issue with cyrillyc font encodings

--- a/tex-shared/no-title-layout.sty
+++ b/tex-shared/no-title-layout.sty
@@ -39,8 +39,8 @@
 \setlength{\parindent}{1.25cm}
 \setlength{\parskip}{8pt}
 
- % Format section style and indentations
-\titleformat{\section}[hang]{\large \centering \bfseries}{\thesection}{0.5em}{\MakeTextUppercase}
+% Format section style and indentations
+\titleformat{\section}[hang]{\large \centering \bfseries}{\thesection}{0.5em}{}
 \titlespacing{\section}{\parindent}{1em}{0em}
 
 % Format subsection style and indentations
