Use manual uppercase

--- a/Web/Курсач/Report.tex
+++ b/Web/Курсач/Report.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-\section{Техническое задание}
+\section{ТЕХНИЧЕСКОЕ ЗАДАНИЕ}
 \subsection{Цели создания и целевая аудитория}
 Целью создания сайта является помощь в самостоятельном изучении английского языка
 лицам, желающим укрепить свой уровень знаний.
