--- a/ИАД/Lab1/Report.tex
+++ b/ИАД/Lab1/Report.tex
@@ -64,7 +64,16 @@ Type 'q()' to quit R.
     \label{fig:help-demo}
 \end{figure}
 
-Выполним операции над векторами:
+Работа с векторами:
+\begin{itemize}
+    \item c() – создать вектор небольшой длины;
+    \item scan() – считывание последовательно вводимые с клавиатуры значения;
+    \item mean() – вычисляет среднее значение элементов вектора;
+    \item paste() –  объединяет элементы множества текстовых векторов;
+    \item sort() – сортировка элементов вектора по возрастанию или убыванию;
+    \item class() – проверка типа вектора;
+    \item sd() – стандартное отклонение.
+\end{itemize}
 \begin{lstlisting}
 > v1 <- c(1, 2, 3, 4, 5) * 3
 > v1
@@ -78,7 +87,15 @@ Type 'q()' to quit R.
 [1] 4
 \end{lstlisting}
 
-Выполним операции над матрицами:
+Работа с матрицами:
+\begin{itemize}
+    \item \%*\% – матричное умножение;
+    \item t(x) – транспонировать матрицу;
+    \item diag(x) – диагональ матрицы;
+    \item solve(a, b) – решает систему уравнений;
+    \item solve(a) – обратная матрица;
+    \item colSums, rowSums, colMeans, rowMeans – сумма и средние по столбцам и строкам.
+\end{itemize}
 \begin{lstlisting}
 > mat1 <- matrix (data=1, nrow=3, ncol=3)
 > mat1
@@ -95,6 +112,24 @@ Type 'q()' to quit R.
 \end{lstlisting}
 
 Работа с графикой:
+\begin{itemize}
+    \item matplot(x,y) – график зависимости столбцов y от столбцов x;
+    \item foutfoldplot(x) – изображает (в виде частей окружности) связь между
+          двумя бинарными переменными в разных совокупностях;
+    \item assocplot(x) – график Кохена-Френдли;
+    \item pairs(x) – функция изображает диаграммы рассеяния для всех возможных
+          пар переменных из матрицы x;
+    \item plot.ts(x), ts.plot(x) – изображает временной ряд;
+    \item qqnorm(x) – квантили;
+    \item qqplot(x, y) – график зависимости квантилей y от квантилей x;
+    \item contour(x, y, z) – выполняет интерполяцию данных и создает контурный
+          график;
+    \item symbols(x, y) – изображает различные символы в соответствии с
+          координатами;
+    \item termplot(mod.obj) – изображает частные эффекты переменных из
+          регрессионной модели;
+\end{itemize}
+
 \begin{lstlisting}
 > x <- c(1, 2, 3, 4, 5)
 > y <- c(1, 2, 3, 4, 5)
@@ -111,20 +146,9 @@ Type 'q()' to quit R.
     \caption{Демонстация работы с графикой}
 \end{figure}
 
-\section{Контрольные вопросы}
-\begin{enumerate}
-    \item Особенности языка R.
-    
-    R - язык программирования, ориентированный на статическую обработку данных.
-    Он является интерпретируемым языком, основным инструментом для работы с
-    которым является командный интерпретатор \code{R.exe}.
+\section*{Выводы}
+В ходе лабораторной работы было получено начальное представлене об особенностях
+языка (платформы R): о запуске интерпретатора, об операторах, об операциях над
+векторами, матрицами, о работе с графикой.
 
-    Основной программной единицей в языке являются объекты (скалярные базовые
-    значения отсутствуют).
-
-    Для присваивания используется следующий оператор: \code{<-}. Язык регистрозависим.
-
-    \item Для получения подробной информации о функции используется команда \code{help}.
-    \item Команда \code{Round}
-\end{enumerate}
 \end{document}
