Add task into report

--- a/Web/Lab8/Report.tex
+++ b/Web/Lab8/Report.tex
@@ -16,6 +16,30 @@
 стороне сервера. Приобрести практические навыки использования языка PHP для
 генерации HTML-кода и обработки HTML-форм в MVC приложении.
 
+\section{Задание на работу}
+\begin{enumerate}
+    \item В соответствии с рекомендациями, представленными в п. 1.2.8
+          реструктурировать код пресонального сайта на основе шаблона MVC.
+    \item Для страницы \enquote{Фотоальбом} реализовать хранение данных фото
+          (подписей и имен файлов) в соответствующих константах модели Photo.
+          Вывод таблицы, содержащей фото, реализовать в представлении с
+          использованием операторов циклов.
+    \item Реализовать класс FormValidation, выполняющий валидацию \\данных форм,
+          передаваемых на сторону сервера.
+    \item С использованием разработанного класса реализовать валидацию форм
+          enquote{Контакт} и enquote{Тест по дисциплине}.
+    \item Реализовать дочерний класс CustomFormValidation \\от класса
+          FormValidation, дополнив его возможностью выполнения специализированной
+          проверки формы \enquote{Тест по дисциплине} на стороне сервера.
+    \item Реализовать дочерний класс ResultsVerification от класса\\
+          CustomFormValidation, дополнив его возможностью проверки правильности
+          ответов, введенных пользователем на странице \enquote{Тест по дисциплине}
+          (реализовать проверку правильности для вопросов с элементами ввода типа
+          RadioButton, ComboBox или однострочный текст) и вывода результатов проверки
+          пользователю.
+\end{enumerate}
+\pagebreak
+
 \section{Ход работы}
 \subsection{Реализация маршрутизации}
 
